Cleaned html code.

--- a/UI/index.html
+++ b/UI/index.html
@@ -6,7 +6,7 @@
         <title>Noto-Build UI</title>
         <link rel="preconnect" href="https://cdn.jsdelivr.net">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" integrity="sha256-Ww++W3rXBfapN8SZitAvc9jw2Xb+Ixt0rvDsmWmQyTo=" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" href="index.css">
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.min.js" integrity="sha256-KSlsysqp7TXtFo/FHjb1T9b425x3hrvzjMWaJyKbpcI=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.10.2/Sortable.min.js" integrity="sha256-8Ww0c1qKDMdHT2+3s3369kzSXcgIrvqzSwzjdZ5qHDs=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/vuedraggable@2.24.1/dist/vuedraggable.umd.min.js" integrity="sha256-3ux9DyWlRqDg9v2ZHRlKrQPru/To6i2BfQv4lenuRfs=" crossorigin="anonymous"></script>
@@ -308,7 +308,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <hr> -->
                 </div>
             </div>
             <div class="command-container">
