Hidden VueJS syntax until the page is ready.

--- a/UI/index.html
+++ b/UI/index.html
@@ -14,7 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/clipboard.js@1.0.1/dist/clipboard.min.js" integrity="sha256-HUQP8SUHMJ/pHYah14Em47rjRwTvxaADBSuOJI9DuiU=" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div id="app" class="container" v-if="ready">
+        <div id="app" class="container" v-if="ready" v-cloak>
             <div class="row">
                 <div class="col-12 mt-4 text-nowrap">
                     <h1 class="h1">noto-build-ui</h1>
